# problem_komiwojazera

./: CMakeLists.txt  Problemy.txt  README.md  main.cpp
include/: TSP.hpp  tsp_setup.hpp
src/: TSP.cpp
tests/: tests.cpp
